# newton-faer

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: engine.rs  lib.rs  linalg.rs  solver.rs
