[package]
name = "newton_faer"
version = "0.1.0"
edition = "2024"
authors = ["Alessandro Latif <alelat19@gmail.com>"]
license = "MIT"
description = "Newton's method for solving systems of nonlinear equations using the Faer library."
repository = "https://github.com/alexlatif/newton-faer"
homepage = "https://github.com/alexlatif/newton-faer"
documentation = "https://docs.rs/newton-faer"
keywords = ["nonlinear", "optimization", "algebra", "linear", "newton"]
readme = "./README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[lib]
name = "newton_faer"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
faer          = { version = "0.22.6", features = ["rayon", "std"] }
faer-sparse   = "0.17.1"
error-stack   = "0.5.0"
rayon         = "1"
num-complex = "0.4.6"
dyn-stack = "0.13.0"
num-traits = "0.2.19"
faer-traits = "0.22.1"
